@@ -2,6 +2,12 @@ CHANGELOG
 =========
 
 
+2021-09-18
+----------
+### Changelog extractor
+* Add command line parameter `--github-current-version` to use a custom tag name or commit id as current version for the GitHub extraction.
+
+
 2021-09-04
 ----------
 ### Changelog extractor
